<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="12dp"
            tools:listitem="@layout/spinner_item"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/product_name"
            android:layout_marginHorizontal="12dp"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/teal_200">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProductName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/product_description"
            android:layout_marginHorizontal="12dp"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/teal_200">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProductDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/product_price"
            android:layout_marginHorizontal="12dp"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/teal_200">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProductPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/product_selling_price"
            android:layout_marginHorizontal="12dp"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/teal_200">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProductSP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvCoverIv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_cover_image"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:gravity="center"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="12dp"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/ivCoverProduct"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_image_search"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="3dp"/>

        <TextView
            android:id="@+id/tvProductsIv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_products_image"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:gravity="center"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewIvProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/product_image_item"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="3dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:background="@color/teal_200"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</ScrollView>