<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:elevation="33dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ivProduct"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:padding="3dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_image_search"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/ivProduct"
                app:layout_constraintStart_toStartOf="@+id/ivProduct"
                app:layout_constraintTop_toBottomOf="@+id/ivProduct" />
            <TextView
                android:id="@+id/tvProductCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_category"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="3dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnDelete"
                app:layout_constraintStart_toEndOf="@+id/ivProduct"/>
            <ImageView
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                android:padding="3dp"
                app:layout_constraintStart_toEndOf="@+id/tvProductCategory"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/tvProductDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_description"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:padding="3dp"
                app:layout_constraintTop_toBottomOf="@+id/btnDelete"
                app:layout_constraintStart_toEndOf="@id/ivProduct"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="3dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProductDescription"
                app:layout_constraintStart_toEndOf="@id/ivProduct"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/tvProductSellingPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_selling_price"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="3dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProductPrice"
                app:layout_constraintStart_toEndOf="@id/ivProduct"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>